# m1-notepad

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  Makefile  Makefile.variables  README.md  m1-notepad.jucer
.github/workflows/: workflow.yml
Resources/: CMakeLists.txt  CmakeLists.txt  InnoSetup.iss
Source/: CMakeLists.txt  CmakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
m1-notepad/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
